tdksoftonline/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: academy
  labels:
    name: tdk-soft
    env: production
