tdksoftonline/k8s/base/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdk-service
spec:
  selector:
    app: tdk-site
  ports:
    - protocol: TCP
      port: 80         # Port exposé au sein du cluster
      targetPort: 8000 # Port sur lequel écoute ton FastAPI (Dockerfile)
  type: ClusterIP
