tdksoftonline/k8s/base/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdk-academy-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - academy.tdksoftconsulting.de
  rules:
    - host: academy.tdksoftconsulting.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdk-academy-service
                port:
                  number: 80
